src/objects/Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver from the technical quality team</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliverables2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ChangeManagerIsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateSubmitted__c</fullName>
        <inlineHelpText>Date deliverable submitted to the client.</inlineHelpText>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DelegateProject__c</fullName>
        <formula>Project__c</formula>
        <label>Delegate Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverableOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pointing towards contact instead of user. do not use</description>
        <label>xxDeliverable Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliverableType__c</fullName>
        <description>May be better implemented as record types.</description>
        <inlineHelpText>Select the type of deliverable from the menu.  Select more than one if a deliverable is a &quot;package&quot; that includes multiple types, such as drawings, specifications, calculations and data sheets.</inlineHelpText>
        <label>Deliverable Type</label>
        <picklist>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DeliverablesOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person responsible for ensuring the deliverable is prepared, reviewed, approved and submitted to the client.</inlineHelpText>
        <label>Deliverable Originator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>DeliverablesOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Provide a brief description of the deliverable.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <inlineHelpText>The date the deliverable is due to the client.</inlineHelpText>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InternalDeliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the document is for internal use only (e.g., not a client deliverable).</inlineHelpText>
        <label>Internal Deliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumofApprovedStatuses__c</fullName>
        <description>Roll up summary of total number of technical quality team members with a status of approved</description>
        <label># of Approved Statuses</label>
        <summaryFilterItems>
            <field>TechnicalQualityTeam__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>TechnicalQualityTeam__c.Deliverable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofApproversRole__c</fullName>
        <description>Roll up summary field for the # of technical quality team members with a role of approver</description>
        <label># of Approvers Role</label>
        <summaryFilterItems>
            <field>TechnicalQualityTeam__c.Role__c</field>
            <operation>equals</operation>
            <value>Approver</value>
        </summaryFilterItems>
        <summaryForeignKey>TechnicalQualityTeam__c.Deliverable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofOwners__c</fullName>
        <description>Roll up summary for # of technical quality team members with a role of owner</description>
        <label># of Owners</label>
        <summaryFilterItems>
            <field>TechnicalQualityTeam__c.Role__c</field>
            <operation>equals</operation>
            <value>Owner</value>
        </summaryFilterItems>
        <summaryForeignKey>TechnicalQualityTeam__c.Deliverable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofRevisions__c</fullName>
        <description>Rollup summary to total the number of document revisions</description>
        <label># of Revisions</label>
        <summaryForeignKey>DeliverableRevision__c.Deliverable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumofTQTApprovers__c</fullName>
        <description>Roll up summary for the total number of technical quality team members</description>
        <label># of TQT Approvers</label>
        <summaryForeignKey>TechnicalQualityTeam__c.Deliverable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Owner from the technical quality team</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliverables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentApproved__c</fullName>
        <formula>IF(NumofApprovedStatuses__c = 0, 0, NumofApprovedStatuses__c / NumofTQTApprovers__c)</formula>
        <label>% Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PracticeArea__c</fullName>
        <inlineHelpText>Select the discipline(s) that will be involved in the preparation and review of the deliverable.</inlineHelpText>
        <label>Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archaeology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture, Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture, Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Estimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design/Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS Management Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use the lookup function to link the deliverable to a specific WBS task (as needed).</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Task__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>DeliverablesProjectTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use the lookup function to link the deliverable to a specified scope (as needed).</inlineHelpText>
        <label>Related Scope Package</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Packages__c.Scope__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Packages__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>The deliverable as it relates to a project</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Select the status of the project deliverable using the drop down menu.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EcoOnly1ApproverCheck</fullName>
        <active>true</active>
        <description>Validates that there is only 1 approver in the technical quality team</description>
        <errorConditionFormula>NumofApproversRole__c &gt;1</errorConditionFormula>
        <errorMessage>There can only be 1 approver per deliverable. Please update the existing technical quality team approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoOnly1OwnerCheck</fullName>
        <active>true</active>
        <description>Validates that there is only 1 owner in the technical quality team</description>
        <errorConditionFormula>NumofOwners__c &gt;1</errorConditionFormula>
        <errorMessage>There can only be 1 owner per deliverable. Please update the existing technical quality team owner.</errorMessage>
    </validationRules>
</CustomObject>